# flowseek

./: .gitignore  .gitmodules  Makefile  README.md  build.sh
flowseek/: Makefile  README.md
flowseek/src/: ndpiReader.c  session2png.c
httpserver/: Makefile  captue.pcap
httpserver/frontend/: index.html
httpserver/frontend/assets/: main.js  style.css
httpserver/frontend/components/: ACLConfig.vue  App.vue  DeepLearning.vue  DeepLearningConfig.vue  DeepLearning_bak.vue  Home.vue  IPSConfig.vue  Navigation.vue  Product.vue
httpserver/src/: main.c
httpserver/src/handlers/: acl_handler.c  acl_handler.h  deep_learning_handler.c  deep_learning_handler.h  ips_handler.c  ips_handler.h  ndpi_handler.c  ndpi_handler.h  system_handler.c  system_handler.h
models/: build.sh
models/DeepTraffic/deepdetect/: CMakeLists.txt  Makefile  build.sh  convert.py  deepdetect.cc
models/DeepTraffic/deeptrain/: 1_Png2Mnist.py  2_encrypt_traffic_cnn_1d_tf2.py  3_encrypt_traffic_cnn_1d_tf2_png.py  4_convert.py  encrypt_traffic_cnn_1d_tf2_png.py
src/: http_process.c  http_process.h  ndpiReader.c  reader_util.c  reader_util.h
